--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Caesar Chipher</title>
+  <title>Caesar cipher</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-  <h1>Caesar chipher</h1>
+  <h1>Caesar cipher</h1>
   <form action="index.html" method="get">
     <input type="textarea" name="text" placeholder="Text" autofocus>
     <input type="text" name="shift" placeholder="Shift" class="small">
